[gd_scene load_steps=13 format=2]

[ext_resource path="res://screens/welcome.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/chewy_font_enormous.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/console_font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/chewy_font_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://textures/icon_settings.png" type="Texture" id=5]
[ext_resource path="res://screens/check_internet_connection.tscn" type="PackedScene" id=6]
[ext_resource path="res://screens/settings.tscn" type="PackedScene" id=7]
[ext_resource path="res://screens/update.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "welcome"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("lblWelcome:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.9, 2.2, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.12549, 1, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0.992157, 1, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0.945098, 1, 0, 1 ), Color( 0.0313726, 1, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lblWelcome:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 91.5, 1000 ), Vector2( 91.5, 350 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("lblEmo:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0.12549, 1, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("lblDisclamer:custom_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.8, 2.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0.352941, 0.352941, 0.352941, 1 ), Color( 0.760784, 0.760784, 0.760784, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="InputEventAction" id=2]
action = "ui_accept"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="Welcome" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="lblDisclamer" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -28.0
grow_vertical = 0
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
custom_fonts/font = ExtResource( 3 )
text = "DISCLAMER_BETA"
autowrap = true

[node name="lblEmo" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -605.0
margin_top = -157.0
margin_right = 7.99988
margin_bottom = 319.0
rect_rotation = 19.7627
custom_colors/font_color = Color( 0.12549, 1, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = ":-)"
align = 1
valign = 1

[node name="lblWelcome" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -868.5
margin_top = -190.0
margin_right = 868.5
margin_bottom = 574.0
custom_colors/font_color = Color( 0.0313726, 1, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Kugel  II"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/welcome = SubResource( 1 )

[node name="btnPlay" type="Button" parent="."]
modulate = Color( 0.760784, 1, 0.654902, 1 )
margin_left = 50.0
margin_top = 50.0
margin_right = 700.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0.0470588, 0.478431, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 4 )
shortcut = SubResource( 3 )
text = "Start_Game"

[node name="btnSettings" type="Button" parent="."]
modulate = Color( 0.643137, 0.72549, 1, 1 )
margin_left = 50.0
margin_top = 233.0
margin_right = 700.0
margin_bottom = 389.0
custom_colors/font_color = Color( 0, 0.0862745, 0.658824, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Settings"
icon = ExtResource( 5 )

[node name="btnQuit" type="Button" parent="."]
modulate = Color( 1, 0.576471, 0.576471, 1 )
margin_left = 748.0
margin_top = 233.0
margin_right = 1227.0
margin_bottom = 389.0
custom_colors/font_color = Color( 0.615686, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Quit"

[node name="CheckInternetConnection" parent="." instance=ExtResource( 6 )]

[node name="Settings" parent="." instance=ExtResource( 7 )]

[node name="CheckForUpdate" parent="." instance=ExtResource( 8 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="pressed" from="btnSettings" to="." method="_on_btnSettings_pressed"]
[connection signal="pressed" from="btnQuit" to="." method="_on_btnQuit_pressed"]
[connection signal="done" from="CheckInternetConnection" to="." method="_on_CheckInternetConnection_done"]
[connection signal="done" from="CheckForUpdate" to="." method="_on_CheckForUpdate_done"]
